# dbt-automation-demo

./: .gitignore  README.md  pyproject.toml
analytics_dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
analytics_dbt/models/marts/: customer_lifetime_value.sql  customer_orders.sql  customer_segments.sql  order_summary.sql
analytics_dbt/models/staging/: sources.yml  stg_customer_demographics.sql  stg_customer_web_activity.sql  stg_customers.sql  stg_customers_enriched.sql  stg_orders.sql  stg_orders_enriched.sql  stg_products.sql  stg_web_events.sql
analytics_dbt/seeds/: raw_customers.csv  raw_orders.csv
src/dbt_automation_demo/defs/analytics/: component.py  defs.yaml
src/dbt_automation_demo/defs/components/: safe_scheduled_job_component.py
src/dbt_automation_demo/defs/duckdb_assets/: component.py  defs.yaml
tests/: test_automation_conditions.py
